...
    android:layout_height="match_parent"
    android:clickable="false">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_location"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <ImageView
...
        android:contentDescription="@string/choose_location"/>

    <AutoCompleteTextView
        android:drawableRight="@drawable/ic_search"
        android:drawableEnd="@drawable/ic_search"
        android:tint="@color/colorAccent"
        android:id="@+id/search_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
...
            android:id="@+id/space1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/template_sun"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/template_button"
            android:src="@drawable/ic_sun_filled"
...
            android:onClick="onTemplateButtonClick"
            android:elevation="2dp"
            android:layout_marginBottom="5dp"
            />

        <ImageButton
            android:id="@+id/template_wind"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/template_button"
            android:src="@drawable/ic_in_sea_filled"
...
            style="?android:attr/borderlessButtonStyle"
            android:onClick="onCancelButtonClick"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextButton"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:background="@color/transparent"
...
