<resources>
    <string name="app_name">Winder</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="temp_interval">Temperature:</string>
    <string name="nedboer_intervall">Precipitation:</string>
    <string name="vind_styrke">Windspeed:</string>
...
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="choose_location">Choose location for alerts</string>
    <string name="soek_hint">Search for location....</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="toast_more_then_ten_alerts">Warning! Alertlist is fully populated, delet one to make room</string>
    <string name="yr_credits">Weather data provided by Yr.no</string>
    <string name="last_update">Last update:</string>
    <string name="empty_list_text">Winder finds a matching weather for you</string>
    <string name="manual_refresh">Updating forecasts...</string>
    <string name="settings_for_alert">Choose preferences for alert</string>
    <!-- AlertOverViewActivity-->
    <string name="title_activity_alert_over_view">AlertOverViewActivity</string>
    <string name="your_preferences">Your preferences:</string>
    <string name="check_interval">Check interval: </string>
    <string name="settings">Settings</string>
    <string name="eventlist">Events</string>
...
    <string name="checkinterval_twelve">Every 12 hour</string>
    <string name="checkinterval_day">Every 24 hour</string>
    <string name="checkinterval_twodays">Every 48 hour</string>


    <!--AlertPreferences-->
    <string name="preferences_temperature">Temperature</string>
    <string name="preferences_temperature_scale">\u2103</string>
    <string name="preferences_precipitation">Precipitation</string>
    <string name="preferences_precipitation_amount_period">mm, per 6 hour period</string>
    <string name="preferences_windspeed">Windspeed</string>
    <string name="preferences_windspeed_description">m/s</string>
    <string name="preferences_winddir">Wind direction</string>
    <string name="preferences_weekdays_check">Weekdays for check</string>
    <string name="preferences_interval">Check interval</string>
    <string name="preferences_interval_description">Choose frequency for the automatic weather check</string>
    <string name="choose_winddirection_string">Choose wind direction</string>
    <string name="choose_weekdays_string">Choose which days you prefer the weather to occur (Default is all days)</string>
    <string name="preferences_suncheck">Suncheck</string>
...
