...
    </android.support.design.widget.AppBarLayout>

    <!-- Her inkluderes layoutfilen content_main: -->
    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize = "normal"
        android:layout_margin="@dimen/fab_margin"
        app:borderWidth="0dp"
...
