...
    tools:showIn="@layout/activity_main"
    android:fitsSystemWindows="true"
    android:id="@+id/main_activity_content"
    android:background="@color/md_blue_grey_50">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:paddingBottom="80dp"
        android:clipToPadding="false"/>

...
